Removed Detailed page link, fixed Header.css link spacing issue.

--- a/met-musesum-of-art/src/styles/Header.css
+++ b/met-musesum-of-art/src/styles/Header.css
@@ -33,11 +33,11 @@ nav ul {
 }
 
 nav a {
-  padding: .25rem;
+  padding: .25rem .75rem;
 }
 
 nav li {
-  width: 5vw;
+  min-width: 5vw;
 }
 
 .nav-link {
